--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -3,9 +3,10 @@
     {% include "snippets/social.html" %}
     <div>
       <p>
-        I mostly write about Rust and my (open-source) projects. If you would
-        like to receive future posts automatically, you can subscribe via
-        <a href="/rss.xml">RSS</a>.
+        Hey, I mostly write about software development, Rust and
+        open-source. If you would like to receive future posts
+        automatically, you can subscribe to my
+        <a href="/rss.xml">RSS feed</a>.
       </p>
       <p>
         For more info, check out my
